--- a/adreses.html
+++ b/adreses.html
@@ -9,6 +9,6 @@
     <table style="border: 1px solid black;"> 
         <tr><td>slidošana</td><td>Rīgā</td></tr>
         </table>
-        
+         <a href="index.html">--></a>
     </body>
 </HTML>
