--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
+        <link rel="stylesheet" href="mansStils.css">
         <title> html </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,7 @@
     <li> Brauciens ar kvadraciklu vai sniega motociklu </li>
     </ul>
         <img src="images/briedis.jpg" style="widh:60px;heigh:50px;">
-        <a href="https://www.lieliskadavana.lv/aktiva-atputa-ziema">Ziemas atpūtas dāvanu kartes</a>
+        <a href="https://www.lieliskadavana.lv/aktiva-atputa-ziema" target="_blank"> Ziemas atpūtas dāvanu kartes</a>
         <a href=" adreses.html"> Adrese</a>
     </body>
 </HTML>
