--- a/adreses.html
+++ b/adreses.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
+        <link rel="stylesheet" href="mansStils.css">
         <title> html </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
