--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
-        <link rel="stylesheet" href="mansStils.css">
+        <link rel="stylesheet" href="css/mansStils.css">
         <title> html </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
