--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
         <img src="images/briedis.jpg" style="widh:60px;heigh:50px;">
         <a href="https://www.lieliskadavana.lv/aktiva-atputa-ziema" target="_blank"> Ziemas atpūtas dāvanu kartes</a>
         <a href=" adreses.html"> Adrese</a>
+        <a href=" skola.html"> Skola</a>
+        <a href=" darbibas.html"> Darbibas</a>
     </body>
 </HTML>
