--- a/skola.html
+++ b/skola.html
@@ -34,6 +34,11 @@ nav {
   -ms-flex: 1;
   flex: 1;
   background: #ccc;
+   color: white;
+  
+  background-image: url(images/skola.jpg);
+  background-size: 450px 350px;
+  background-repeat: repeat-y;
   padding: 20px;
 }
 
@@ -45,6 +50,7 @@ nav ul {
 
 /* Style the content */
 article {
+  
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
@@ -79,17 +85,22 @@ footer {
   <nav>
     <p>Satura rādītājs</p>
     <ul>
-      <li><a href="#vesture">Vēsture</a></li>
-      <li><a href="#nosaukumi">Skolas nosaukumu maiņas</a></li>
-      <li><a href="#vaditaji">Zināmie skolas vadītāji (1229—1804)</a></li>
-      <li><a href="#absolventi">Skolas absolventi</a></li>
+      <li><a href="#vesture">1. Vēsture</a></li>
+      <li><a href="#nosaukumi">2. Skolas nosaukumu maiņas</a></li>
+      <li><a href="#vaditaji">3. Zināmie skolas vadītāji (1229—1804)</a></li>
+      <li><a href="#absolventi">4. Skolas absolventi</a></li>
     </ul>
   </nav>
   
   <article>
     <h2 id=”vesture”>Vēsture.</h2>
-    <p>Rīgas Valsts 1. ģimnāzija (saīsinājumā RV1Ģ vai RV1.ģ) ir vispārējās pamata un vidējās izglītības iestāde Rīgā. Tā ir pilsētas senākā skola. Ģimnāzija specializējas matemātikas un valodu padziļinātā apgūšanā. Mācības šajā skolā notiek latviešu valodā. Kopš 1996. gada ģimnāzija piedalās Starptautiskā bakalaurāta mācību programmas realizācijas projektā. Skolai kā pirmajai Latvijā dibināta absolventu un draugu biedrība ar mērķi finansiāli atbalstīt skolu. Lai iegūtu vietu skolā, ir jāiztur matemātikas konkurss, kurā uz vienu vietu pretendē vairāki skolēni. 9. klases noslēgumā skolēniem jāiztur vēl viens matemātikas konkurss, lai saglabātu vietu skolā. 2019. gadā konkursam uz 10. klasi pieteicās vairāk nekā tūkstoš Latvijas 9. klašu skolēnu.
-Skolas pastāvēšanai iespējams izsekot līdz pat 1211. gadam, kad bīskaps Alberts Rīgā nodibināja Svētās Marijas katedrāli un pie tās — Livonijas bīskapijas domkapitula klosteri. Skola atradās Doma baznīcas krustejā un bija paredzēta katoļu garīdznieku sagatavošanai. Zviedru laikā ar Zviedrijas karaļa Gustava II Ādolfa lēmumu 1631. gadā uz Doma skolas bāzes izveidoja Rīgas Akadēmisko ģimnāziju. 1804. gadā izglītības reformu laikā Domskolu pārveidoja par Rīgas apriņķa galveno mācību iestādi — Rīgas 1. apriņķa skolu, 1861. gadā — par Rīgas reālģimnāziju, kurā mācījās arī Vilhelms Ostvalds (1864—1871), bet 1873. gadā — par Rīgas Pilsētas ģimnāziju. 1874. gadā pēc Rīgas galvenā arhitekta Johana Daniela Felsko projekta tika uzcelta tagadējā skolas ēka Raiņa bulvārī 8. Vecā skolas ēka pie Doma baznīcas tika nojaukta 1888. gadā, būvējot pilsētas muzeju. Rusifikācijas periodā 1894. gadā skolu pārveidoja par klasisko ģimnāziju, vēlāk — par valsts ģimnāziju (Государственная гимназия) ar krievu mācību valodu. 1919. gadā Stučkas valdība pārdēvēja to par Rīgas 1. vidusskolu ar latviešu mācību valodu, Latvijas Republikas laikā tika atjaunota Rīgas pilsētas 1. ģimnāzija. Pēc Latvijas okupācijas skolu atkal pārdēvēja par Rīgas 1. vidusskolu un 1944. gadā nosauca tās pirmā direktora Leona Paegles vārdā. Pēc Latvijas Republikas atjaunošanas skola atguva Rīgas 1. ģimnāzijas vārdu, bet kopš 1996. gada tiek dēvēta par Rīgas Valsts 1. ģimnāziju. Meklējot datus par skolas vēsturi, jāņem vērā, ka laika posmā, kad skolu sauca par Rīgas pilsētas 1. ģimnāziju, pastāvēja arī Rīgas Valsts 1. ģimnāzija, kas nav saistīta ar šajā rakstā minēto skolu.
+    <p>Rīgas Valsts 1. ģimnāzija (saīsinājumā RV1Ģ vai RV1.ģ) ir vispārējās pamata un vidējās izglītības iestāde Rīgā. Tā ir pilsētas senākā skola. Ģimnāzija specializējas matemātikas un valodu padziļinātā apgūšanā. Mācības šajā skolā notiek latviešu valodā. Kopš 1996. gada ģimnāzija piedalās Starptautiskā bakalaurāta mācību programmas realizācijas projektā. Skolai kā pirmajai Latvijā dibināta absolventu un draugu biedrība ar mērķi finansiāli atbalstīt skolu.</p>
+    <p>Lai iegūtu vietu skolā, ir jāiztur matemātikas konkurss, kurā uz vienu vietu pretendē vairāki skolēni. 9. klases noslēgumā skolēniem jāiztur vēl viens matemātikas konkurss, lai saglabātu vietu skolā. 2019. gadā konkursam uz 10. klasi pieteicās vairāk nekā tūkstoš Latvijas 9. klašu skolēnu.</p>
+    <p>Skolas pastāvēšanai iespējams izsekot līdz pat 1211. gadam, kad bīskaps Alberts Rīgā nodibināja Svētās Marijas katedrāli un pie tās — Livonijas bīskapijas domkapitula klosteri. Skola atradās Doma baznīcas krustejā un bija paredzēta katoļu garīdznieku sagatavošanai.</p>
+    <p>Zviedru laikā ar Zviedrijas karaļa Gustava II Ādolfa lēmumu 1631. gadā uz Doma skolas bāzes izveidoja Rīgas Akadēmisko ģimnāziju. 1804. gadā izglītības reformu laikā Domskolu pārveidoja par Rīgas apriņķa galveno mācību iestādi — Rīgas 1. apriņķa skolu, 1861. gadā — par Rīgas reālģimnāziju, kurā mācījās arī Vilhelms Ostvalds (1864—1871), bet 1873. gadā — par Rīgas Pilsētas ģimnāziju. 1874. gadā pēc Rīgas galvenā arhitekta Johana Daniela Felsko projekta tika uzcelta tagadējā skolas ēka Raiņa bulvārī 8. Vecā skolas ēka pie Doma baznīcas tika nojaukta 1888. gadā, būvējot pilsētas muzeju.</p><!-- comment -->
+    <p>Rusifikācijas periodā 1894. gadā skolu pārveidoja par klasisko ģimnāziju, vēlāk — par valsts ģimnāziju (Государственная гимназия) ar krievu mācību valodu. 1919. gadā Stučkas valdība pārdēvēja to par Rīgas 1. vidusskolu ar latviešu mācību valodu, Latvijas Republikas laikā tika atjaunota Rīgas pilsētas 1. ģimnāzija.</p><!-- comment -->
+    <p>Pēc Latvijas okupācijas skolu atkal pārdēvēja par Rīgas 1. vidusskolu un 1944. gadā nosauca tās pirmā direktora Leona Paegles vārdā. Pēc Latvijas Republikas atjaunošanas skola atguva Rīgas 1. ģimnāzijas vārdu, bet kopš 1996. gada tiek dēvēta par Rīgas Valsts 1. ģimnāziju.</p><!-- comment -->
+    <p>Meklējot datus par skolas vēsturi, jāņem vērā, ka laika posmā, kad skolu sauca par Rīgas pilsētas 1. ģimnāziju, pastāvēja arī Rīgas Valsts 1. ģimnāzija, kas nav saistīta ar šajā rakstā minēto skolu.</p>
 </p>
     <h2 id="nosaukumi">Skolas nosaukumu maiņas.</h2>
     <p>Pēc Latvijas Valsts arhīva datiem, Rīgas Valsts 1. ģimnāzija piedzīvojusi vismaz 15 dažādus nosaukumus:</p>
@@ -110,7 +121,7 @@ Skolas pastāvēšanai iespējams izsekot līdz pat 1211. gadam, kad bīskaps Al
     <li>1990.—1996. — Rīgas 1. ģimnāzija</li>
     <li>1996.—pašlaik — Rīgas Valsts 1. ģimnāzija</li>
     </ul>
-    <h2 id="vaditaji">Zināmie skolas vadītāji(1229—1804)</h2>
+    <h2 id="vaditaji">Zināmie skolas vadītāji(1229—1804).</h2>
     <table style="border: 1px solid black;">
   <tr>
     <th>Gads</th>
@@ -178,15 +189,15 @@ Skolas pastāvēšanai iespējams izsekot līdz pat 1211. gadam, kad bīskaps Al
     <td>rektors Johans Augusts Albanuss</td>
     </tr>
 </table>
-    <h2 id="absolventi">Skolas absolventi</h2>
+    <h2 id="absolventi">Skolas absolventi.</h2>
     <p>Tomass Dukurs, Valters Frīdenbergs, Toms Skujiņš, Daina Taimiņa</p>
-    <p>Rainis, īstajā vārdā Jānis Pliekšāns ir dzimis 1865. gada 11. septembrī Ilūkstes apriņķa Dunavas pagasta „Varslavānos” latviešu zemnieka Krišjāņa Pliekšāna (ap 1828—1891) un viņa sievas Dārtas (ap 1828—1899) ģimenē. Kristīts Kaldabruņas luterāņu baznīcā.[4] Jānim bija divas māsas: Līze (1854—1897) un Dora (pēc laulībām Pliekšāne-Stučka 1870—1950).[5] Viņa tēvs nomāja un apsaimniekoja pusmuižas, tādēļ ģimene bieži mainīja dzīvesvietu, un Jāņa bērnība un pusaudža gadi pagāja Tadenavas (1865—1869), Randenes (1869—1872) un Berķeneles (1872—1881) pusmuižās Sēlijā. Viņš mācījās Grīvas proģimnāzijā[6] (tagad — Raiņa Daugavpils 6. vidusskola; 1875—1879) un Rīgas pilsētas ģimnāzijā (tagad — Rīgas 1. ģimnāzija), kuru beidza 1884. gadā.</p>
+    <p>Rainis, īstajā vārdā Jānis Pliekšāns ir dzimis 1865. gada 11. septembrī Ilūkstes apriņķa Dunavas pagasta „Varslavānos” latviešu zemnieka Krišjāņa Pliekšāna (ap 1828—1891) un viņa sievas Dārtas (ap 1828—1899) ģimenē. Kristīts Kaldabruņas luterāņu baznīcā. Jānim bija divas māsas: Līze (1854—1897) un Dora (pēc laulībām Pliekšāne-Stučka 1870—1950).Viņa tēvs nomāja un apsaimniekoja pusmuižas, tādēļ ģimene bieži mainīja dzīvesvietu, un Jāņa bērnība un pusaudža gadi pagāja Tadenavas (1865—1869), Randenes (1869—1872) un Berķeneles (1872—1881) pusmuižās Sēlijā. Viņš mācījās Grīvas proģimnāzijā (tagad — Raiņa Daugavpils 6. vidusskola; 1875—1879) un Rīgas pilsētas ģimnāzijā (tagad — Rīgas 1. ģimnāzija), kuru beidza 1884. gadā.</p>
      <a href=" https://enciklopedija.lv/skirklis/55869-Rainis"> Lasīt vairāk par Raini...</a>
   </article>
 </section>
 
 <footer>
-  <img src="images/logo_160.jpg" style="widh:60px;heigh:50px;">
+  <a href="http://r1g.edu.lv/"><img src="images/logo_160.jpg" style="widh:60px;heigh:50px;"></a>
 </footer>
 
 </body>
