--- a/darbibas.html
+++ b/darbibas.html
@@ -26,5 +26,10 @@
 <input onclick="rez10.value=0" name="reiz10" value="x" type="button"> 0=&nbsp;
 &nbsp;<input name="rez10">
 </p>
+<p>1&nbsp;
+    <input onclick="rez4.value=1" name="plus4" value="+" type="button"> &nbsp;
+<input onclick="rez4.value=1" name="reiz4" value="x" type="button"> 1=&nbsp;
+&nbsp;<input name="rez4">
+</p>
 </form>
 </body></html>
